--- a/index.html
+++ b/index.html
@@ -18,16 +18,67 @@
             <h1> <span class="text-color">We Offer The Best Food </span> Around You With Best Quality </h1>
             <h1>Have Fun & Enjoy Our Food</h1>
             <p class="para-size"> Imagine a world where you shouldn't worry about your diet because we are providing
-                delicious food maintaining the quality and keeping the food safe for your health</p>
+                delicious food maintaining the quality and keeping the food safe for your health.</p>
+
+            <a class="order-button" target="_blank" href="https://www.foodpanda.com.bd/"> ORDER FOOD</a>
 
         </div>
 
         <div class="half-width">
-            <img src="images/female/Group 8425.png" alt="">
+            <img class="first-pic" src="images/female/Group 8425.png" alt="">
+            
+           
 
 
 
         </div>
+
+    </section>
+
+
+
+    <section class="second-banner flex-cntrl">
+
+        <div class="half-width">
+
+            <img class="second-pic" src="images/male/young-guy-holding-fresh-burger_79782-176-removebg-preview.png"
+                alt="">
+
+        </div>
+
+
+
+        <div class="half-width">
+            <h1> About Us</h1>
+            <p class="para-size"> We are delivering food all over Bangladesh. And We are making food in our own kitchen.
+                It's completely hygenic and you're getting food from a clean environment. We can ensure you we'll love
+                our food and have fun!</p>
+
+
+                <a class=order-button href=""> CONTACT US </a>
+
+
+
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     </section>
 </body>
