--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
         <div class="half-width">
             <img class="first-pic" src="images/female/Group 8425.png" alt="">
-            
-           
+
+
 
 
 
@@ -49,17 +49,90 @@
 
 
         <div class="half-width">
-            <h1> About Us</h1>
+            <h1 class="about-us"> About Us</h1>
             <p class="para-size"> We are delivering food all over Bangladesh. And We are making food in our own kitchen.
                 It's completely hygenic and you're getting food from a clean environment. We can ensure you we'll love
                 our food and have fun!</p>
 
 
-                <a class=order-button href=""> CONTACT US </a>
+            <a class=order-button href="https://github.com/Mezbah101"> CONTACT US </a>
 
 
 
 
+        </div>
+
+    </section>
+
+
+    <section class="third-banner">
+
+        <div class="recipie-headings">
+            <h1> Our Recipies</h1>
+            <p class="rec-des"> We're providing various collections of food. You'll get premium collections only here.
+                Take a look on
+                our collections and get yourself lost in the world of your desire food!</p>
+
+        </div>
+
+        <div class="recipies-item">
+
+            <div class="list-item">
+
+                <img src="images/food/Project Cover7.png" alt="">
+                <h2>Vegetable Salad</h2>
+                <p> This item is completely healthy maintaining our premium taste. If you're conscious enough to
+                    maintain your diet then it'll definately recommanded for you. </p>
+            </div>
+
+            <div class="list-item">
+
+                <img src="images/food/Project Cover f1.png" alt="">
+                <h2>Fruit Combo</h2>
+                <p>Who doesn't love fruits? Everyone enjoys eating fruits. We've brought a fruit combo for you and your
+                    adorable family. Hope you'll like this item definately.</p>
+            </div>
+
+            <div class="list-item">
+
+                <img class="fix1" src="images/food/Project Cover f2.png" alt="">
+                <h2 class="fix"> Morning Breakfast</h2>
+
+                <p> Morning shows the day! Starting a day with having proper food keep you energetic enough to pass the
+                    day with productivity. So, We've brought a complete healthy breakfast package for you to make your
+                    day!</p>
+                </p>
+            </div>
+
+
+        </div>
+    </section>
+
+    <section class="fourth-banner">
+        <div class="content-head">
+
+            <div class="content1">
+                <h1>100K</h1>
+                <h4> Youtube Subscribers</h4>
+            </div>
+
+            <div class="content2">
+                <h1>1M</h1>
+                <h4>Instagram Followers</h4>
+            </div>
+            <div class="content3">
+                <h1>100K</h1>
+                <h4>Dribble Shot Likes</h4>
+            </div>
+        </div>
+    </section>
+    <section class="bottom-banner">
+
+        <div class="bottom">
+
+            <h1> <span class="food">Food</span> Hub</h1>
+
+            <h5>We ensure you the healthy food. Eat healthy and Stay healthy</h5>
         </div>
 
 
@@ -68,19 +141,11 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
     </section>
+
+
+
+
 </body>
 
 </html>
